stremthru/middleware-chain-stream.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: chain-stream
  namespace: stremthru
spec:
  chain:
    middlewares:
    # These are generic
    - name: headers-add-cors-for-stremio
      namespace: traefik
    - name: return-code-override-ratelimit
      namespace: traefik

    # These are specific to comet, since they return a comet-specific error
    - name: errors-rate-limit-exceeded   

    # This is generic again
    - name: clusterratelimit-public-stremio-addon-stream
      namespace: traefik
