stremthru/middleware-errors-rate-limit-exceeded.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: errors-rate-limit-exceeded
  namespace: stremthru
spec:
  errors:
    status:
      - "429"
    query: /stremthru-search-rate-limited.json
    service:
      name: deprecations
      namespace: deprecations
      port: 8080
