stremthru/service-elfhosted-internal.stremthru.yaml
apiVersion: v1
kind: Service
metadata:
  name: elfhosted-internal
  namespace: stremthru
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: elfhosted-internal-stremthru-${tailscale_suffix}
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: stremthru
  sessionAffinity: None
  type: ClusterIP
