stremthru/ingressroute-stremthru.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stremthru.${dns_domain}
  namespace: stremthru
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stremthru.${dns_domain}`)
      kind: Rule
      services:
        - name: stremthru
          kind: Service
          port: 8080
      middlewares:  
        - name: error-pages
          namespace: traefik
        # - name: rate-limit-stremthru        
    # Block URLs we don't want public access to
    - match: Host(`stremthru.${dns_domain}`) && PathPrefix(`/v0/store/magnets/check`) 
      kind: Rule
      services:
        - name: stremthru
          kind: Service
          port: 8080
      middlewares:  
        - name: ipallowlist-localhost-only
          namespace: traefik
